Livrables/K8s/service.yml

---
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  labels:
    app: reddit-clone
spec:
  selector:
    app: reddit-clone
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
